# kProcessor

./: ._to_be_removed_travis.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Requirements  _CMakeLists.txt  build_wrapper.sh  conf.py  config.txt  counter.cpp  counterMain.cpp  detectFusionGenes.cpp  dumpMain.cpp  estimateMemoryMain.cpp  indexMain.cpp  kDataFrame.cpp  kDataFrame.hpp  kProcessor.doxygen  kProcessor.i  main.cpp  playground.cpp  publish.cpp  requirements.txt  results2.txt  run_compare.sh  setup.py  test  test_kDataframe.py  tmp.fa  version.py  wrapper.sh  wrapper_build.sh
.github/workflows/: cibuildwheel.yml  ubuntu.yml
HashUtils/: hashutil.cpp  hashutil.h
KmerCounter/: KmerCounter.cpp  KmerCounter.hpp  kmer.cpp  kmer.h
KmerDecoder/: FastqReader.cpp  FastqReader.hpp  KmerDecoder.hpp
MQF/: Makefile  gqf.c  gqf.h
Utils/: utils.hpp
apps/: CMakeLists.txt  convert.cpp  convertColorsAndtestIndex.cpp  counterMain.cpp  createForest.cpp  dumpMain.cpp  estimateMemoryMain.cpp  index.cpp  indexMain.cpp  loadFromKMC.cpp  loadFromTSV.cpp  main.cpp  mergeIndex.cpp  optimizeIndex.cpp  partitionReads_part1.cpp  playground.cpp  testIndex.cpp
docs/: _config.yml  index.md
docs/python/: README.md  coloredKDataFrame.markdown  indexing.markdown  introduction.markdown  kDataFrame.markdown  kDataFrameIterator.markdown  kmerCounting.markdown  kmerDecoder.markdown  setFunctions.markdown  subpage.markdown
docs/source/: CITATION.md  FAQ.md  LICENCE.md  conf.py  cpp_api.rst  get_started.md  index.rst  py_api.rst  readme.md  recipes.rst
docs/source/recipes/: recipe_1.ipynb  recipe_1.md  recipe_2.ipynb  recipe_2.md  recipe_3.ipynb  recipe_3.md  recipe_4.ipynb  recipe_4.md  recipe_5.ipynb  recipe_5.md  recipe_6.ipynb
include/: kDataFrame.hpp
include/KmerCounter/: KmerCounter.hpp
include/kProcessor/: KmerDecoder.hpp  algorithms.hpp  batchQuery.hpp  colorTable.hpp  colored_kDataFrame.hpp  dbgUtils.hpp  defaultColumn.hpp  extend_algorithms.hpp  kDataFrame.hpp  restriction_tags.hpp  utils.hpp
include/kProcessor/HashUtils/: hashutil.h
include/kProcessor/KmerCounter/: kmer.h
include/kProcessor/KmerDecoder/: FastqReader.hpp  KmerDecoder.hpp
include/kProcessor/Utils/: utils.hpp
include/kProcessor/kDataframes/: kDataFrameBMQF.hpp  kDataFrameBlight.hpp  kDataFrameMQF.hpp  kDataFrameSSHash.hpp  kDataFrameSTL.hpp
kProcessor/: algorithms.py  colored_kDataFrame.py  kDataFrame.py  kDataFrameIterator.py  kDataFrameMAP.py  kDataFrameMQF.py  kDataFramePHMAP.py  kmerRow.py  seqs_to_kmers.py  set_functions.py
lib/HashUtils/: hashutil.cpp
lib/KmerCounter/: KmerCounter.cpp
lib/KmerDecoder/: FastqReader.cpp
src/: algorithms.cpp  batchQuery.cpp  colorTable.cpp  colored_kDataFrame.cpp  counterMain.cpp  dbgUtils.cpp  dumpMain.cpp  estimateMemoryMain.cpp  extend_algorithms.cpp  indexMain.cpp  kDataFrame.cpp  kp_numpy.cpp  playground.cpp  restriction_tags.cpp
src/HashUtils/: hashutil.cpp
src/KmerCounter/: KmerCounter.cpp  kmer.cpp
src/KmerDecoder/: FastqReader.cpp
src/Utils/: kmer.cpp  utils.cpp
src/kDataFrames/: colored_kDataFrame.cpp  defaultColumn.cpp  kDataFrame.cpp  kDataFrameBMQF.cpp  kDataFrameBlight.cpp  kDataFrameMAP.cpp  kDataFrameMQF.cpp  kDataFramePHMAP.cpp  kDataFrameSTL.cpp  kDataFrame_sshash.cpp
swig_interfaces/: batchQuery.i  colorTable.i  colored_kDataFrame.i  kProcessor.i  kProcessor_wrap.cpp  numpy_bindings.i
swig_interfaces/.history/kDataFrame/: kDataFrame_20190930144639.i
swig_interfaces/HashUtils/: hashutil.i
swig_interfaces/Utils/: kmer.i
swig_interfaces/algorithms/: algorithms.i  extend_algorithms.i  parseSequences.i
swig_interfaces/kDataFrame/: dbgIterator.i  defaultColumn.i  kDataFrame.i  kDataFrameBMQF.i  kDataFrameBlight.i  kDataFrameFactory.i  kDataFrameIterator.i  kDataFrameMAP.i  kDataFrameMQF.i  kDataFramePHMAP.i  kDataFrameSTL.i  kmerRow.i
swig_interfaces/modules/: custom_typemaps.i  custom_unordered_maps.i  sys_args.i
tests/: CMakeLists.txt  testKmerCounter.cpp  testkDataFrame.cpp  testsMain.cpp
tests/kProcessorLibTests/: CMakeLists.txt  main.cpp  testExample.cpp  testExample.h  testkDataFrame.cpp  testkDataframe.h
tests/python/: test_kDataFrameBMQF.py  test_kDataFrameMAP.py  test_kDataFrameMQF.py  test_kDataFrameMultiColumn.py  test_kDataFramePHMAP.py  test_kmerCounting.py  test_kmerDecoder.py  test_saveAndLoad.py  test_setFunctions.py
tests/python/params/: __init__.py  params.py
tests/testData/: .stxxl  small.fa  test.noN.dsk.txt  test.noN.fastq  test.noN.fastq.21.kmc_suf  test.noN.fastq.31.kmc_pre  test.noN.fastq.31.kmc_suf  test.noN.fastq.ntCardRes  test1.fa  test1.fa.names  test2.bcalm.k21.fasta.unitigs.fa  test2.bcalm.k31.fasta.unitigs.fa  test2.noN.fastq.ntCardRes  test3.noN.fastq
usecases/kDifferentialExpression/: CMakeLists.txt  README.md  Snakefile  config.yaml  downloadData.sh  main.cpp  pyVersion.py  sample_table.csv  subsample_table.csv
usecases/kProcessor_corticall/: CMakeLists.txt  README.md  Snakefile  SnakefileCorticall  addLinks.cpp  clean.cpp  config.yaml  detectNovelKmers.cpp  downloadData.sh  env.yaml  main.cpp  renameColumns.cpp  sample_table.csv  subsample_table.csv  urls
usecases/kUpsetPlot/: CMakeLists.txt  README.md  Snakefile  downloadData.sh  env.yaml  main.cpp  project_config.yaml  sample_table.csv  subsample_table.csv
usecases/svPopFilter/: CMakeLists.txt  README.md  Snakefile  createSVFrame.cpp  download.smk  extractReads.cpp  sample_table.csv  subsample_table.csv  svPopFilter.cpp  tmp.progneytree  urls
